--- a/main.css
+++ b/main.css
@@ -44,6 +44,10 @@ header {
   color: gray;
 }
 
+#todoList span{
+  visibility: hidden;
+}
+
 #main li {
   width: 90%;
 }
@@ -61,4 +65,8 @@ header {
   display: inline-block;
   padding: 5px 10px;
   margin: 10px 20px;
+}
+
+#clearCompleted {
+  visibility: hidden;
 }
