--- a/css/main.css
+++ b/css/main.css
@@ -1,54 +1,108 @@
 body {
-  background-color: white;
-  width: 95%;
+  width: 90%;
   margin: 0 auto;
   color: black;
+  font-size: 16px;
+  font-family: "Helvetica Neue",Helvetica,Arial,sans-serif;
 }
 #total {
-  background-color: antiquewhite;
   width: 70%;
   margin: 0 auto;
+  background: #CDCDCD;
 }
 
 header {
-  font-family: fantasy;
-  font-size: 30px;
-  text-align: center;
-  padding:10px 0;
+  height: 50px;
+  background: rgba(47,47,47,0.98);
 }
 
-#addTodo, #main, #footButtons {
+label{
+  float:left;
+  margin-left: 130px;
+  width:100px;
+  line-height:50px;
+  color:#DDD;
+  font-size:24px;
+  cursor:pointer;
+}
+
+header input {
+  float: right;
+  width: 40%;
+  height: 24px;
+  margin-top: 12px;
+  margin-right: 145px;
+  text-indent: 10px;
+  border-radius: 5px;
+  box-shadow: 0 1px 0 rgba(255,255,255,0.24), 0 1px 6px rgba(0,0,0,0.45) inset;
+  border: none;
+}
+
+#main, #footButtons {
   width: 80%;
-  margin: 5px auto;
-}
-
-#addTodo input {
-  width: 85%;
-  padding: 5px;
-  margin:5px;
-}
-
-#addTodo button{
-  display: inline-block;
-  margin: 5px;
-  padding: 3px 5px;
+  margin: 20px auto;
 }
 
 #todoList {
-  list-style-type: circle;
+  list-style-type: none;
+  width: 80%;
+}
+#todoList li {
+  height:32px;
+  line-height:32px;
+  background: #fff;
+  position:relative;
+  margin-bottom: 10px;
+  padding:0 45px;
+  border-radius:3px;
+  border-left: 5px solid #629A9C;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.07);
+}
+li p {
+  margin: 0;
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+}
+
+li input{
+  position: absolute;
+  top: 2px;
+  left: 10px;
+  width: 22px;
+  height: 22px;
+  cursor: pointer;
+}
+li span{
+  position: absolute;
+  top: 2px;
+  right: 5px;
+  display: inline-block;
+  width: 14px;
+  height: 12px;
+  border-radius: 14px;
+  border: 6px double #FFF;
+  background: #CCC;
+  line-height: 14px;
+  text-align: center;
+  color: #FFF;
+  font-weight: bold;
+  font-size: 14px;
+  cursor: pointer;
 }
 
 #todoList li:hover span {
 visibility: visible;
 }
 
-#todoList li:hover {
-  border-bottom:solid 1px rgb(131, 110, 110);
-}
-
 #todoList .completed {
-  list-style-type: disc;
   text-decoration: line-through;
+  color: gray;
+  opacity: 0.5;
+}
+#todoList .completed input{
   color: gray;
 }
 
@@ -59,26 +113,30 @@ visibility: visible;
 #main li {
   width: 90%;
 }
-#main span {
-  float: right;
-}
 
 #leftItems {
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
   font-size: 20px;
+  margin: 0 10px 0 40px;
 }
 
 #footButtons input {
+  font-size: 16px;
+  border-radius: 5px;
   display: inline-block;
   padding: 5px 10px;
-  margin: 10px 20px;
+  margin: 10px 10px;
+  color: black;
+}
+#footButtons input:hover {
+  background-color: rgb(77, 75, 75);
+  border-color: rgb(77, 75, 75);
 }
 
 #clearCompleted {
   visibility: hidden;
 }
 
-#deleteMarks {
-  visibility: visible;
+input {
+  outline: none;
 }
+
